icon32dir = $(datadir)/icons/hicolor/32x32/apps
dist_icon32_DATA = 32x32/mex.png

icon48dir = $(datadir)/icons/hicolor/48x48/apps
dist_icon48_DATA = 48x48/mex.png

icon128dir = $(datadir)/icons/hicolor/128x128/apps
dist_icon128_DATA = 128x128/mex.png

icon256dir = $(datadir)/icons/hicolor/256x256/apps
dist_icon256_DATA = 256x256/mex.png

icon512dir = $(datadir)/icons/hicolor/512x512/apps
dist_icon512_DATA = 512x512/mex.png

EXTRA_DIST = mex.svg
